deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-eureka-server
  namespace: webapp
  labels:
   name: test-eureka-server
spec:
  ports:
  - port: 82
    targetPort: 8080
    name: http
  selector:
    name: test-eureka-server
