deploy/test-eureka-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-eurekaserver-ingressroute
  namespace: webapp
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`192.168.1.30`) && PathPrefix(`/testEurekaServer`)
    kind: Rule
    services:
    - name: webtest-svc
      port: 82
